# ChangeLog for app-misc/uptimed
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.96 2013/04/29 09:24:12 polynomial-c Exp $

  29 Apr 2013; Lars Wendler <polynomial-c@gentoo.org>
  -uptimed-0.3.16-r6.ebuild, uptimed-0.3.17-r1.ebuild:
  Fix configure.ac for >=automake-1.13 (bug #467582). Removed old.

  28 Feb 2013; Jeroen Roovers <jer@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for HPPA (bug #457250).

  23 Feb 2013; Lars Wendler <polynomial-c@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Don't install libtool archives by default (bug #457754). Ported ebuild to
  EAPI-5. Small cleanups.

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for alpha, wrt bug #457250

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for ppc64, wrt bug #457250

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for ppc, wrt bug #457250

  17 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for x86, wrt bug #457250

  17 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for amd64, wrt bug #457250

  15 Feb 2013; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.17-r1.ebuild:
  Stable for sparc, wrt bug #457250

  14 Jan 2013; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
  Better fix for bug #448382. Thanks to WilliamH for giving the right input.

  24 Dec 2012; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
  Really fix init script this time.

*uptimed-0.3.17-r1 (24 Dec 2012)
*uptimed-0.3.16-r6 (24 Dec 2012)

  24 Dec 2012; Lars Wendler <polynomial-c@gentoo.org>
  -uptimed-0.3.16-r5.ebuild, +uptimed-0.3.16-r6.ebuild, -uptimed-0.3.17.ebuild,
  +uptimed-0.3.17-r1.ebuild, files/uptimed.init:
  Fixed init script so openrc no longer sees uptimed as crashed. Thanks to
  Nikolaj Sjujskij for reporting this in bug #448382.
