@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/uptimed
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.96 2013/04/29 09:24:12 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.97 2013/05/20 09:23:15 lxnay Exp $
+
+  20 May 2013; Fabio Erculiani <lxnay@gentoo.org> uptimed-0.3.17-r1.ebuild,
+  +files/uptimed.service:
+  add systemd unit on behalf of the systemd team, fix bug #468898, overriding
+  unresponsive maintainer
 
   29 Apr 2013; Lars Wendler <polynomial-c@gentoo.org>
   -uptimed-0.3.16-r6.ebuild, uptimed-0.3.17-r1.ebuild:
